on click top media chart redirect to article list

--- a/src/app/modules/dashboard/components/media-chart/media-chart.component.html
+++ b/src/app/modules/dashboard/components/media-chart/media-chart.component.html
@@ -19,6 +19,7 @@
         [data]="data"
         [options]="options"
         [plugins]="plugins"
+        (onDataSelect)="onDataSelect($event)"
       ></p-chart>
     </div>
     <div class="flex flex-column gap-4">
