--- a/src/app/modules/dashboard/overview/top-media/top-media.component.html
+++ b/src/app/modules/dashboard/overview/top-media/top-media.component.html
@@ -10,6 +10,7 @@
         <app-media-chart
           [data]="chart"
           [title]="chart.media_name"
+          [onSelectTone]="onSelectTone"
         ></app-media-chart>
       </div>
     </div>
