--- a/src/app/modules/dashboard/preference/preference.component.html
+++ b/src/app/modules/dashboard/preference/preference.component.html
@@ -1,1 +1,100 @@
-<p>preference works!</p>
+<section>
+  <p-tabView>
+    <p-tabPanel>
+      <ng-template pTemplate="header">
+        <div class="flex gap-2">
+          <i class="pi pi-list"></i>
+          <span class="text-xs text-color font-normal">Media list</span>
+        </div>
+      </ng-template>
+      <div>
+        <app-media-list></app-media-list>
+      </div>
+    </p-tabPanel>
+    <p-tabPanel>
+      <ng-template pTemplate="header">
+        <div class="flex gap-2">
+          <i class="pi pi-file"></i>
+          <span class="text-xs text-color font-normal">Category List</span>
+        </div>
+      </ng-template>
+      <p>
+        Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+        accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab
+        illo inventore veritatis et quasi architecto beatae vitae dicta sunt
+        explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut
+        odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
+        voluptatem sequi nesciunt. Consectetur, adipisci velit, sed quia non
+        numquam eius modi.
+      </p>
+    </p-tabPanel>
+    <p-tabPanel>
+      <ng-template pTemplate="header">
+        <div class="flex gap-2">
+          <i class="pi pi-list"></i>
+          <span class="text-xs text-color font-normal">SubCategory List</span>
+        </div>
+      </ng-template>
+      <p>
+        At vero eos et accusamus et iusto odio dignissimos ducimus qui
+        blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
+        et quas molestias excepturi sint occaecati cupiditate non provident,
+        similique sunt in culpa qui officia deserunt mollitia animi, id est
+        laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita
+        distinctio. Nam libero tempore, cum soluta nobis est eligendi optio
+        cumque nihil impedit quo minus.
+      </p>
+    </p-tabPanel>
+    <p-tabPanel>
+        <ng-template pTemplate="header">
+          <div class="flex gap-2">
+            <i class="pi pi-user"></i>
+            <span class="text-xs text-color font-normal">Spokeperson Alias</span>
+          </div>
+        </ng-template>
+        <p>
+          At vero eos et accusamus et iusto odio dignissimos ducimus qui
+          blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
+          et quas molestias excepturi sint occaecati cupiditate non provident,
+          similique sunt in culpa qui officia deserunt mollitia animi, id est
+          laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita
+          distinctio. Nam libero tempore, cum soluta nobis est eligendi optio
+          cumque nihil impedit quo minus.
+        </p>
+      </p-tabPanel>
+      <p-tabPanel>
+        <ng-template pTemplate="header">
+          <div class="flex gap-2">
+            <i class="pi pi-volume-up"></i>
+            <span class="text-xs text-color font-normal">Stopword</span>
+          </div>
+        </ng-template>
+        <p>
+          At vero eos et accusamus et iusto odio dignissimos ducimus qui
+          blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
+          et quas molestias excepturi sint occaecati cupiditate non provident,
+          similique sunt in culpa qui officia deserunt mollitia animi, id est
+          laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita
+          distinctio. Nam libero tempore, cum soluta nobis est eligendi optio
+          cumque nihil impedit quo minus.
+        </p>
+      </p-tabPanel>
+      <p-tabPanel>
+        <ng-template pTemplate="header">
+          <div class="flex gap-2">
+            <i class="pi pi-file-export"></i>
+            <span class="text-xs text-color font-normal">File Export</span>
+          </div>
+        </ng-template>
+        <p>
+          At vero eos et accusamus et iusto odio dignissimos ducimus qui
+          blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
+          et quas molestias excepturi sint occaecati cupiditate non provident,
+          similique sunt in culpa qui officia deserunt mollitia animi, id est
+          laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita
+          distinctio. Nam libero tempore, cum soluta nobis est eligendi optio
+          cumque nihil impedit quo minus.
+        </p>
+      </p-tabPanel>
+  </p-tabView>
+</section>
