--- a/src/styles.scss
+++ b/src/styles.scss
@@ -82,6 +82,10 @@ button {
   fill: var(--primary-color) !important;
 }
 
+.fill-negative {
+  fill: var(--negative-color) !important;
+}
+
 .fill-text-color {
   fill: var(--text-color) !important;
 }
