--- a/src/app/modules/dashboard/preference/category-list/category-list.component.html
+++ b/src/app/modules/dashboard/preference/category-list/category-list.component.html
@@ -21,8 +21,8 @@
     <div>
       <div class="card">
         <p-table
-          [value]="medias"
-          dataKey="user_media_type_id"
+          [value]="categories"
+          dataKey="category_set"
           [rows]="10"
           [totalRecords]="totalRecords"
           [showFirstLastIcon]="false"
@@ -35,7 +35,7 @@
                 <div class="flex align-items-center gap-2">
                   <span>No</span>
                   <i
-                    pSortableColumn="user_media_type_id"
+                    pSortableColumn="category_set"
                     class="pi pi-angle-down"
                   ></i>
                 </div>
@@ -44,7 +44,7 @@
                 <div class="flex align-items-center gap-2">
                   Category Name
                   <i
-                    pSortableColumn="user_media_type_name_def  "
+                    pSortableColumn="descriptionz"
                     class="pi pi-angle-down"
                   ></i>
                 </div>
@@ -52,17 +52,17 @@
               <th style="width: 4rem" class="text-center">Action</th>
             </tr>
           </ng-template>
-          <ng-template pTemplate="body" let-media let-expanded="expanded">
+          <ng-template pTemplate="body" let-category let-expanded="expanded">
             <tr class="text-sm">
               <td>
                 <div class="flex align-items-center gap-2">
-                  {{ media.user_media_type_id }}
+                  {{ category.category_set }}
                 </div>
               </td>
               <td>
                 <div class="flex align-items-center gap-1 w-max">
                   <div>
-                    {{ media.user_media_type_name_def }}
+                    {{ category.descriptionz }}
                   </div>
                 </div>
               </td>
@@ -73,7 +73,7 @@
                     [text]="true"
                     size="small"
                     styleClass="p-2 border-1 border-200"
-                    (onClick)="openEditModal(media)"
+                    (onClick)="openEditModal(category)"
                   >
                     <icon-pencil class="fill-text-color"></icon-pencil>
                   </p-button>
@@ -82,7 +82,7 @@
                     [text]="true"
                     size="small"
                     styleClass="p-2 border-1 border-200"
-                    (onClick)="deleteMedia(media)"
+                    (onClick)="deleteCategory(category)"
                   >
                     <i class="pi pi-trash text-red-500"></i>
                   </p-button>
@@ -101,7 +101,7 @@
         >
           <ng-template #customLeftTemplate let-state>
             <span class="text-sm text-color">
-              Total Media:
+              Total Category:
               <span class="text-sm font-semibold">{{
                 state.totalRecords
               }}</span></span
@@ -121,17 +121,17 @@
   >
     <ng-template pTemplate="header">
       <div class="inline-flex align-items-center justify-content-center gap-2">
-        <span class="font-bold text-md">Create media</span>
+        <span class="font-bold text-md">Create category</span>
       </div>
     </ng-template>
     <form [formGroup]="createValues" class="flex flex-column gap-4">
       <div class="flex flex-column gap-2">
-        <label for="media" class="font-semibold text-sm">Media Name</label>
+        <label for="category" class="font-semibold text-sm">Category Name</label>
         <input
           pInputText
-          formControlName="media"
-          id="media"
-          placeholder="Media Name"
+          formControlName="category"
+          id="category"
+          placeholder="Category Name"
         />
       </div>
     </form>
@@ -142,11 +142,11 @@
         [outlined]="true"
       ></p-button>
       <p-button
-        (click)="createMedia()"
+        (click)="createCategory()"
         label="Submit"
         pAutoFocus
         [autofocus]="true"
-        [disabled]="!this.createValues.controls.media.valid"
+        [disabled]="!this.createValues.controls.category.valid"
       ></p-button>
     </ng-template>
   </p-dialog>
@@ -160,21 +160,21 @@
   >
     <ng-template pTemplate="header">
       <div class="inline-flex align-items-center justify-content-center gap-2">
-        <span class="font-bold text-md">Detail Media</span>
+        <span class="font-bold text-md">Detail Category</span>
       </div>
     </ng-template>
     <form [formGroup]="editedValues" class="flex flex-column gap-4">
       <div class="flex flex-column gap-2">
-        <label for="media" class="text-sm">Media Name</label>
-        <input pInputText formControlName="media" id="media" />
+        <label for="category" class="text-sm">Category Name</label>
+        <input pInputText formControlName="category" id="category" />
       </div>
     </form>
     <div class="mt-4">
       <p-treeSelect
         class="w-full md:w-20rem"
         containerStyleClass="w-full"
-        [(ngModel)]="selectedMediaGroups"
-        [options]="mediaGroupsOptions"
+        [(ngModel)]="selectedSubCategories"
+        [options]="subCategoryOptions"
         [filter]="true"
         [filterInputAutoFocus]="true"
         [metaKeySelection]="false"
@@ -194,7 +194,7 @@
         [outlined]="true"
       ></p-button>
       <p-button
-        (click)="updateMedia()"
+        (click)="updateCategory()"
         label="Save"
         pAutoFocus
         [autofocus]="true"
@@ -211,7 +211,7 @@
   >
     <ng-template pTemplate="header">
       <div class="inline-flex align-items-center justify-content-center gap-2">
-        <span class="font-bold text-md">Delete Media</span>
+        <span class="font-bold text-md">Delete Category</span>
       </div>
     </ng-template>
     <div class="text-center">
@@ -230,7 +230,7 @@
         [outlined]="true"
       ></p-button>
       <p-button
-        (click)="confirmDeleteMedia()"
+        (click)="confirmDeleteCategory()"
         [loading]="isDeleting"
         label="Delete"
         severity="danger"
