--- a/src/app/modules/dashboard/preference/preference.component.html
+++ b/src/app/modules/dashboard/preference/preference.component.html
@@ -29,15 +29,9 @@
           <span class="text-xs text-color font-normal">SubCategory List</span>
         </div>
       </ng-template>
-      <p>
-        At vero eos et accusamus et iusto odio dignissimos ducimus qui
-        blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
-        et quas molestias excepturi sint occaecati cupiditate non provident,
-        similique sunt in culpa qui officia deserunt mollitia animi, id est
-        laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita
-        distinctio. Nam libero tempore, cum soluta nobis est eligendi optio
-        cumque nihil impedit quo minus.
-      </p>
+      <ng-template pTemplate="content">
+        <app-sub-category-list></app-sub-category-list>
+      </ng-template>
     </p-tabPanel>
     <p-tabPanel>
       <ng-template pTemplate="header">
